--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,4 +1,3 @@
-
 events {
   worker_connections  1024;  ## Default: 1024
 }
@@ -25,15 +24,12 @@ http {
         }
 
         location / {
-            proxy_pass http://127.0.0.1:8000;
-            #proxy_pass http://127.0.0.1/hello;
-            #proxy_set_header Host $host;
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://127.0.0.1:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-        location ^~ /hello/ {
-            proxy_pass http://127.0.0.1;
-            #proxy_set_header Host $host;
-            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        location = /hello.py {
+            root /home/box/web;
         }
     }
 }
