--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -8,7 +8,7 @@ http {
     log_format simple '$remote_addr $request $status';
     server {
         listen       80;
-        server_name  127.0.0.1;
+        #server_name  127.0.0.1;
         access_log /home/box/web/log/nginx.access_log simple;
 
         location ^~ /uploads/ {
@@ -24,12 +24,14 @@ http {
         }
 
         location / {
-            proxy_pass http://127.0.0.1:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://0.0.0.0:8080;
+            #proxy_set_header Host $host;
+            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-        location = /hello.py {
-            root /home/box/web;
+        location =/hello/ {
+            proxy_pass http://0.0.0.0:8080;
+            #proxy_set_header Host $host;
+            #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
